--- a/application/index/view/install/update.html
+++ b/application/index/view/install/update.html
@@ -34,7 +34,7 @@
   <main class="mdui-shadow-2">
     <h3>- 数据库结构更新准备就绪</h3>
       {if $msg}
-      <p class="mdui-text-color-red">{$msg|raw}</p>
+      <div class="mdui-text-color-red">{$msg|raw}</div>
       {/if}
       {if $code eq 0}
       <form action="" method="get">
