- 移除图片后清空图片列表 - 首页增加"本站已托管N张图片"

--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Cache-Control" content="no-siteapp"/>
@@ -130,7 +130,7 @@
 </div>
 <footer>
   <div class="mdui-container">
-    Copyright &copy; 2018 <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
+    Copyright &copy; 2018 - 2019 <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
     {if $config.icp_number}<a href="http://www.miitbeian.gov.cn" target="_blank">{$config.icp_number}</a>.{/if}
     请勿上传违反中国大陆和香港法律的图片，违者后果自负。
   </div>
