增加自定义统计代码配置

--- a/application/index/view/admin/system/index.html
+++ b/application/index/view/admin/system/index.html
@@ -26,7 +26,7 @@
               <input class="mdui-textfield-input" type="{$val.input_type}" name="{$val.name}" value="{$val.value}" autocomplete="off" placeholder="{$val.title}"/>
               {/case}
               {case textarea}
-              <textarea class="mdui-textfield-input" name="{$val.name}" autocomplete="off" placeholder="{$val.title}">{$val.value}</textarea>
+              <textarea class="mdui-textfield-input" rows="6" name="{$val.name}" autocomplete="off" placeholder="{$val.title}">{$val.value}</textarea>
               {/case}
               {case bool}
               <label class="mdui-switch">
