优化后台列表筛选

--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -11,7 +11,7 @@
   <main>
     <div class="mdui-chip">
       <span class="mdui-chip-icon"><i class="mdui-icon material-icons">&#xe88e;</i></span>
-      <span class="mdui-chip-title">系统共有 <small class="mdui-text-color-red">{$images->total()}</small> 张图片</span>
+      <span class="mdui-chip-title">共有 <small class="mdui-text-color-red">{$images->total()}</small> 张图片</span>
       <a href="" class="mdui-chip-delete" mdui-tooltip="{content: '刷新', position: 'right'}"><i class="mdui-icon material-icons">&#xe863;</i></a>
     </div>
     <div class="mdui-clearfix mdui-m-t-1"></div>
