--- a/application/index/view/admin/system/index.html
+++ b/application/index/view/admin/system/index.html
@@ -6,6 +6,11 @@
 <div class="mdui-container">
   <main>
     <div class="system-container">
+      <div class="mdui-typo">
+        <blockquote class="mdui-m-l-0">
+          <p>系统配置，统计代码中注意要使用&lt;script&gt;&lt;/script&gt;标签，不设置可为空。</p>
+        </blockquote>
+      </div>
       <div class="mdui-tab mdui-tab-scrollable" mdui-tab>
         <a href="#tab-basics" class="mdui-ripple">基础配置</a>
         <a href="#tab-upload" class="mdui-ripple">上传配置</a>
