--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -84,6 +84,7 @@
         <i class="mdui-collapse-item-arrow mdui-icon material-icons">&#xe313;</i>
       </div>
       <div class="mdui-collapse-item-body mdui-list">
+        <a href="{:url('admin/group/index')}" class="mdui-list-item mdui-ripple {if $uri eq 'admin.group/index'}mdui-list-item-active{/if}">角色组</a>
         <a href="{:url('admin/users/index')}" class="mdui-list-item mdui-ripple {if $uri eq 'admin.users/index'}mdui-list-item-active{/if}">用户管理</a>
         <a href="{:url('admin/images/index')}" class="mdui-list-item mdui-ripple {if $uri eq 'admin.images/index'}mdui-list-item-active{/if}">图片管理</a>
         <a href="{:url('admin/strategy/index')}" class="mdui-list-item mdui-ripple {if $uri eq 'admin.strategy/index'}mdui-list-item-active{/if}">储存策略</a>
