--- a/application/index/view/admin/users/index.html
+++ b/application/index/view/admin/users/index.html
@@ -42,8 +42,8 @@
           <td>{$value.username}</td>
           <td>
             <select class="mdui-select group">
-              {foreach $groups as $val}
-              <option value="{$group.id}" {if $value.group_id eq $val.id}selected{/if}>{$val.name}</option>
+              {foreach $groups as $group}
+              <option value="{$group.id}" {if $value.group_id eq $group.id}selected{/if}>{$group.name}</option>
               {/foreach}
             </select>
           </td>
@@ -83,33 +83,33 @@
       <form action="{:url('admin/users/edit')}" method="post">
         <div class="mdui-dialog-title">修改用户数据</div>
         <div class="mdui-textfield">
-            <label class="mdui-textfield-label">用户名</label>
-            <input class="mdui-textfield-input" type="text" name="username" value="" placeholder="用户名" autocomplete="off"/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">邮箱</label>
-            <input class="mdui-textfield-input" type="email" name="email" value="" placeholder="邮箱" autocomplete="off"/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">昵称</label>
-            <input class="mdui-textfield-input" type="text" name="nickname" value="" maxlength="15" placeholder="昵称" autocomplete="off"/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">储存容量</label>
-            <input class="mdui-textfield-input" type="text" name="quota" value="" placeholder="储存容量" autocomplete="off"/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">已使用储存容量</label>
-            <input class="mdui-textfield-input" type="text" name="use_quota" value="" placeholder="已使用储存容量" autocomplete="off" disabled/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">密码</label>
-            <input class="mdui-textfield-input" type="password" name="password" placeholder="密码，不修改请留空" autocomplete="off"/>
-          </div>
-          <div class="mdui-textfield">
-            <label class="mdui-textfield-label">确认密码</label>
-            <input class="mdui-textfield-input" type="password" name="password_confirm" placeholder="确认密码" autocomplete="off"/>
-          </div>
+          <label class="mdui-textfield-label">用户名</label>
+          <input class="mdui-textfield-input" type="text" name="username" value="" placeholder="用户名" autocomplete="off"/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">邮箱</label>
+          <input class="mdui-textfield-input" type="email" name="email" value="" placeholder="邮箱" autocomplete="off"/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">昵称</label>
+          <input class="mdui-textfield-input" type="text" name="nickname" value="" maxlength="15" placeholder="昵称" autocomplete="off"/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">储存容量</label>
+          <input class="mdui-textfield-input" type="text" name="quota" value="" placeholder="储存容量" autocomplete="off"/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">已使用储存容量</label>
+          <input class="mdui-textfield-input" type="text" name="use_quota" value="" placeholder="已使用储存容量" autocomplete="off" disabled/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">密码</label>
+          <input class="mdui-textfield-input" type="password" name="password" placeholder="密码，不修改请留空" autocomplete="off"/>
+        </div>
+        <div class="mdui-textfield">
+          <label class="mdui-textfield-label">确认密码</label>
+          <input class="mdui-textfield-input" type="password" name="password_confirm" placeholder="确认密码" autocomplete="off"/>
+        </div>
         <input type="hidden" name="id" value="">
         <div class="mdui-dialog-actions">
           <button type="button" class="mdui-btn mdui-ripple" mdui-dialog-cancel>取消</button>
