--- a/application/index/view/admin/group/index.html
+++ b/application/index/view/admin/group/index.html
@@ -58,7 +58,7 @@
         <div class="mdui-dialog-title">添加角色组</div>
         <div class="mdui-textfield">
           <label class="mdui-textfield-label">组名称</label>
-          <input class="mdui-textfield-input" type="text" name="name" value="" placeholder="用户名" autocomplete="off"/>
+          <input class="mdui-textfield-input" type="text" name="name" value="" placeholder="组名称" autocomplete="off"/>
         </div>
         <div class="mdui-textfield">
           <label class="mdui-textfield-label">使用策略</label>
