更换二维码接口

--- a/application/index/view/user/images.html
+++ b/application/index/view/user/images.html
@@ -129,7 +129,7 @@
       }),
       selectedImagesId = [],
       infoDialog = $(".mdui-dialog#info"),
-      qrcodeApi = 'https://www.kuaizhan.com/common/encode-png?large=true&data=';
+      qrcodeApi = 'https://api.wispx.cn/qrcode/generate?text=';
     params.page = 1;
 
 
