--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -126,6 +126,21 @@ main {
     }
   }
 
+  // 控制台
+  .console-container {
+    .mdui-table td, .mdui-table th {
+      padding: 12px 28px;
+    }
+    div.item {
+      & > div {
+        border-radius: 3px;
+        p {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+
   // 系统设置
   .system-container {
     .mdui-textfield-label {
