:lipstick: 改进细节样式

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -46,12 +46,12 @@
 </div>
 {/block}
 {block name="js"}
+<script src="/static/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/static/clipboard.js/2.0.1/clipboard.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/js/plugins/piexif.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/js/plugins/sortable.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/js/plugins/purify.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/js/fileinput.min.js"></script>
-<script src="/static/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/themes/fas/theme.min.js"></script>
 <script src="/static/bootstrap-fileinput/5.0.1/js/locales/zh.js"></script>
 <script>
@@ -82,6 +82,8 @@
     uploadUrl: "{:url('upload/upload')}",
     language: "zh",
     theme: "fas",
+    previewFileType: "image",
+    autoOrientImage: true,
     uploadAsync: true,
     overwriteInitial: false,
     //browseClass: "btn btn-file",
