--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -86,6 +86,18 @@
           {/if}
         </td>
       </tr>
+      <tr>
+        <td align="right">
+          文件写入权限：
+        </td>
+        <td align="left">
+          {if ($dir) }
+          <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
+          {else/}
+          <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
+          {/if}
+        </td>
+      </tr>
       </tbody>
     </table>
     {if (!$testing) }
