:lipstick: 更新界面和样式文件

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,7 +11,6 @@
 {block name="main"}
 <div class="mdui-container">
   <main>
-    {if (bool) $config.allowed_tourist_upload or $user}
     <div class="upload-container">
       <div class="title">
         <h1>Image Upload</h1>
@@ -35,11 +34,15 @@
         <div id="code-markdown-with-link"><ul></ul></div>
       </div>
     </div>
-    {else /}
-    <div class="not-logged-in jumbotron">
-      <h2>请登录后体验</h2>
-      <a href="{:url('auth/login')}" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-cyan mdui-text-color-white">登录</a>
-      <a href="{:url('auth/register')}" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-green mdui-text-color-white">注册</a>
+    {if 0 == $config.allowed_tourist_upload and !$user}
+    <div class="mask">
+      <div class="content">
+        <div class="panel-box">
+          <h3 class="mdui-m-b-2 text-center">请登录后体验</h3>
+          <a href="{:url('auth/login')}" class="mdui-btn mdui-ripple mdui-color-cyan mdui-text-color-white">登录</a>
+          <a href="{:url('auth/register')}" class="mdui-btn mdui-ripple mdui-color-green mdui-text-color-white">注册</a>
+        </div>
+      </div>
     </div>
     {/if}
   </main>
