--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -164,7 +164,7 @@
       <a href="{:url('/')}" class="mdui-btn mdui-btn-block mdui-m-t-1 mdui-color-teal mdui-ripple">网站首页</a>
       <a href="https://www.wispx.cn" class="mdui-btn mdui-btn-block mdui-m-t-1 mdui-color-pink mdui-ripple">作者博客</a>
     </div>
-    <div class="mdui-m-t-2 mdui-text-color-grey">Copyright &copy; 2018 Wisp X All rights reserved.</div>
+    <div class="mdui-m-t-2 mdui-text-color-grey">Copyright &copy; 2018 - present Wisp X All rights reserved.</div>
     {/case}
 
     {default /}
