--- a/public/static/app/css/app.css
+++ b/public/static/app/css/app.css
@@ -81,13 +81,6 @@ main .register-container {
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
-main .not-logged-in {
-  margin: 10rem 0;
-  text-align: center;
-}
-main .not-logged-in h2 {
-  margin-bottom: 2rem;
-}
 main .upload-container .title {
   margin: 1rem 0;
 }
@@ -311,6 +304,22 @@ main ul.breadcrumb li.active a {
 main .mdui-table td,
 main .mdui-table th {
   padding: 0 10px;
+}
+main .mask {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: -1px;
+  background: rgba(255, 255, 255, 0.47058824);
+  z-index: 99;
+}
+main .mask .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
 }
 .krajee-default .file-footer-caption {
   margin-bottom: 28px;
