--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -55,15 +55,6 @@ main {
     margin-bottom: 4rem;
   }
 
-  .not-logged-in {
-    margin: 10rem 0;
-    text-align: center;
-
-    h2 {
-      margin-bottom: 2rem;
-    }
-  }
-
   .upload-container {
     .title {
       margin: 1rem 0;
@@ -344,6 +335,23 @@ main {
 
   .mdui-table td, .mdui-table th {
     padding: 0 10px;
+  }
+
+  .mask {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    background: rgba(255, 255, 255, 0.47058823529411764);
+    z-index: 99;
+    .content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 100;
+    }
   }
 }
 
