:beers: 醉酒写代码

--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/static/app/iconfont/iconfont.css">
   <link rel="stylesheet" href="/static/mdui/0.4.2/css/mdui.min.css">
-  <link rel="stylesheet" href="/static/app/css/app.css?v=1.2">
+  <link rel="stylesheet" href="/static/app/css/app.css?v=1.3">
   <!--[if IE]>
   <script>window.location.href = '/compatibility.html';</script>
   <![endif]-->
@@ -133,7 +133,7 @@
 </div>
 <footer>
   <div class="mdui-container">
-    Copyright &copy; 2018 - 2019 <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
+    Copyright &copy; 2018 - present <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
     {if $config.icp_number}<a href="http://www.miitbeian.gov.cn" target="_blank">{$config.icp_number}</a>.{/if}
     请勿上传违反中国大陆和香港法律的图片，违者后果自负。
   </div>
