--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -61,7 +61,7 @@ main {
 
       h1 {
         font-weight: 300;
-        font-size: 1.7rem;
+        font-size: 1.8rem;
         text-shadow: -5px 5px 0 rgba(0, 0, 0, .1);
       }
 
@@ -435,6 +435,9 @@ main {
 
     .input-group-append {
       box-shadow: @box-shadow;
+      .btn {
+        box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.13);
+      }
     }
 
     .file-caption .file-caption-name {
