:bug: 修复高并发下上传出现名称重复的 BUG (PHP7.1+)

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -84,7 +84,7 @@
   };
 
   $("#image").fileinput({
-    uploadUrl: "{:url('upload/upload')}",
+    uploadUrl: "{:url('upload/upload')}" + '?rand=' + new Date().getTime().toString(36) + Math.random().toString(36).slice(2),
     language: "zh",
     theme: "fas",
     previewFileType: "image",
