修改 ('album') 为 input('album')

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -25,7 +25,7 @@
       <form action="" method="post" enctype="multipart/form-data">
         <input id="image" style="display: none;" type="file" multiple name="image" accept="image/*">
         <br>
-        <input id="album" class="input-group form-control" type="text" name="album" placeholder="上传到相册" tabindex="500">
+        <input id="album" class="input-group form-control" type="text" name="album" placeholder="上传到相册，{input} 模式不可留空，{input_with_user} 模式可留空" tabindex="500">
       </form>
       <div class="success-info">
         <div class="mdui-tab mdui-tab-scrollable" mdui-tab>
