:sparkles: 增加文件别名功能

--- a/application/index/view/index/api.html
+++ b/application/index/view/index/api.html
@@ -354,6 +354,12 @@ Content-Type: image/png
             <td>图片所在路径</td>
           </tr>
           <tr>
+            <td>alias_name</td>
+            <td>String</td>
+            <td>test</td>
+            <td>图片别名</td>
+          </tr>
+          <tr>
             <td>name</td>
             <td>String</td>
             <td>929616303ca92.jpg</td>
