--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -156,6 +156,7 @@ main {
 
       img.qrcode {
         text-align: center;
+        margin-top: .4rem;
       }
 
       .mdui-dialog-content {
@@ -275,7 +276,7 @@ main {
           font-size: 12px;
           margin: .3rem auto;
           line-height: 1.5em;
-          padding-bottom: 5px;
+          //padding-bottom: 5px;
           overflow: hidden;
           display: -webkit-box;
           -webkit-box-orient: vertical;
