:sparkles: 安装条件增加 ZipArchive

--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -52,7 +52,7 @@
       </tr>
       <tr>
         <td align="right">
-          fileInfo拓展：
+          fileInfo 拓展：
         </td>
         <td align="left">
           {if ($isFileInfo) }
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td align="right">
-          curl拓展：
+          curl 拓展：
         </td>
         <td align="left">
           {if ($isCurl) }
@@ -80,6 +80,30 @@
         </td>
         <td align="left">
           {if ($isMysqli) }
+          <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
+          {else/}
+          <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
+          {/if}
+        </td>
+      </tr>
+      <tr>
+        <td align="right">
+          ZipArchive：
+        </td>
+        <td align="left">
+          {if ($isMysqli) }
+          <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
+          {else/}
+          <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
+          {/if}
+        </td>
+      </tr>
+      <tr>
+        <td align="right">
+          ZipArchive：
+        </td>
+        <td align="left">
+          {if ($isZip) }
           <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
           {else/}
           <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
