:sparkles: 图片最大上传限制兼容字节其他单位 Closed #91

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -20,7 +20,7 @@
       {/if}
       <div class="title">
         <h1>Image Upload</h1>
-        <p>最大可上传 {:round($config.upload_max_size / 1024 / 1024)} MB的图片，单次同时可选择 {$config.upload_single_num} 张。本站已托管 {$images_count} 张图片。</p>
+        <p>最大可上传 {:format_size($config.upload_max_size)} 的图片，单次同时可选择 {$config.upload_single_num} 张。本站已托管 {$images_count} 张图片。</p>
       </div>
       <form action="" method="post" enctype="multipart/form-data">
         <input id="image" style="display: none;" type="file" multiple name="image" accept="image/*">
